--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enaium Blog
-email: your-email@example.com
+email: Enaium@outlook.com
 description: This is Enaium's blog
 baseurl: ""
 url: ""
